--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,15 +32,16 @@
 	  				 	<input type="hidden" name="cap" id="cap" class="form-control" required="Selecione um capítulo">
 
 				    </div>
-				 
-	  			   <div class="col-lg-12 col-xl-6" id="chapter">
-
+	
+	  			   <div class="col-lg-12 col-xl-6">
+                      <span>CAPÍTULOS</span>
+	  			   	  <div  id="chapter"></div>
 	  				</div>
   				
-	  				<div class="">
+	  				<div class="botoes">
 		  				<button type="submit" id="botaoBuscar" class=" btn btn-primary" disabled="disabled">Buscar</button>
-		  				<a href="/?monitor=1" class="btn btn-primary" target="_blank">Monitor</a>
-		  				<button type="button" class="btn btn-primary" data-toggle="modal" data-target=".modalPainel">Painel mobile</button>
+		  				<a href="/?monitor=1" class="btn btn-primary btMobile" target="_blank">Monitor</a>
+		  				<button type="button" class="btn btn-primary btMobile" data-toggle="modal" data-target=".modalPainel">Painel mobile</button>
 		  			</div>
   				</div>
   			</form>
