--- a/views/index.ejs
+++ b/views/index.ejs
@@ -64,7 +64,7 @@
        <div class="col-md-8 offset-md-2 texto">
        	 <h2></h2>
 	     <p></p>
-       	 <div id="versiculo"></div>
+       	 <div id="versiculo" class="standby"></div>
        </div>
     </div>
     
@@ -119,7 +119,21 @@
 
             } 
           
+            //standby
+            function standby(){
+            	var sb= $("#versiculo").hasClass("standby");
+            	if(sb == true){
+	          	$(".texto").hide();
+	          	$("#standby").removeClass("btn-primary");
+	          	$("#standby").addClass("btn-success");
 
+	          }else{
+	          	$(".texto").show();
+	          	$("#standby").removeClass("btn-success");
+	          	$("#standby").addClass("btn-primary");
+	          }
+            }
+            standby();
 
          //mostra a qtd dos captulos do livro escolhido   
 		$("select").change(function(){
@@ -185,17 +199,7 @@
 	          //$('#messages').val('');
             	console.log("standby clicado");
 	          $('#versiculo').toggleClass("standby");
-	          var sb= $("#versiculo").hasClass("standby");
-	          if(sb == true){
-	          	$(".texto").css("background-color", "#ffffff00");
-	          	$("#standby").removeClass("btn-primary");
-	          	$("#standby").addClass("btn-success");
-
-	          }else{
-	          	$(".texto").css("background-color", "rgba(255, 255, 255, 0.30)");
-	          	$("#standby").removeClass("btn-success");
-	          	$("#standby").addClass("btn-primary");
-	          }
+	          standby();
 	        }); 
 
 	      });
