--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,88 +4,82 @@ body {
 }
 
 a {
-  color: #00B7FF;
+  color: #00b7ff;
 }
 
-.menu-versao{
-	margin-bottom: 20px;
+.menu-versao {
+  margin-bottom: 20px;
 }
 
-.texto{
-	color: #1d1c1c;
-    font-size: 34px;
-    text-align: center;
-    margin-top: 10%;
-    padding: 24px;
-    background-color: rgba(255, 255, 255, 0.30);
-    font-family: 'Cookie', cursive;
-    font-style: italic;
+.texto {
+  color: #ffffff;
+  font-size: 50px;
+  text-align: center;
+  margin-top: 10%;
+  padding: 24px;
+  background-color: rgba(0, 0, 0, 0.3);
+  font-family: "Cookie", cursive;
+  font-style: italic;
 }
 
-.texto h2{
-	font-size: 62px;
-    color: #2b2b2b;
-    font-style: italic;
+.texto h2 {
+  font-size: 62px;
+  color: #2b2b2b;
+  font-style: italic;
 }
 
-#monitor{
-	position: relative;
-	width: 100%;
-	height: 100%;
-	align-items: center;
-	overflow: hidden;
-
+#monitor {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  overflow: hidden;
 }
 
-#videobg{
-
-   position: fixed;
+#videobg {
+  position: fixed;
   right: 0;
   bottom: 0;
-  min-width: 100%; 
+  min-width: 100%;
   min-height: 100%;
 }
 
-#chapter{
-	
-	margin-bottom: 20px;
+#chapter {
+  margin-bottom: 20px;
 }
 
-.chapterSelect{
-
-	background-color: whitesmoke;
-    padding: 15px;
-    padding-left: 22px;
-    /* padding-right: 22px; */
-    border-radius: 2px;
-    width: 55px;
-    float: left;
-    cursor: pointer;
-
+.chapterSelect {
+  background-color: whitesmoke;
+  padding: 15px;
+  padding-left: 22px;
+  /* padding-right: 22px; */
+  border-radius: 2px;
+  width: 55px;
+  float: left;
+  cursor: pointer;
 }
 
-.chapterSelected{
-	background-color: #d8d8d8;
+.chapterSelected {
+  background-color: #d8d8d8;
 }
 
-.form-control{
-	margin-bottom: 10px;
+.form-control {
+  margin-bottom: 10px;
 }
 
-.modal{
-	align-items: center;
+.modal {
+  align-items: center;
 }
 
-.versSelected{
-  background-color:#e9ecef;
+.versSelected {
+  background-color: #e9ecef;
 }
 
-@media (max-width: 1020px){
-   
-    .botoes{
-    	margin-top: 10px;
-    }
-    .btMobile{
-    	display: none !important;
-    }
+@media (max-width: 1020px) {
+  .botoes {
+    margin-top: 10px;
+  }
+  .btMobile {
+    display: none !important;
+  }
 }
